--- a/mulit_page/活動介紹_天文.htm
+++ b/mulit_page/活動介紹_天文.htm
@@ -70,19 +70,7 @@
                 <h2 class="title">活動介紹</h2>
                 <!-- CP start -->
                 <section class="cp">
-                    <div class="image">
-                        <img src="images/pic01.jpg" ">
-                    </div>
-                    <ul>
-                        <li><span>活動對象：</span>一般親子</li>
-                        <li><span>活動地點：</span>鳳凰谷鳥園生態園區 (南投縣鹿谷鄉鳳凰村仁義路1-9號)</li>
-                        <li><span>活動日期：</span>108/11/9 (六)</li>
-                        <li><span>報名人數：</span>預計55人，如報名未達30人，活動取消。</li>
-                        <li><span>活動費用：</span>每人新台幣300元整(含講師費、材料費等)。</li>
-                        <li><span>聯絡方式：</span>049-2753100分機122 曾小姐</li>
-                        <li><span>E-MAIL：</span>tseng@nmns.edu.tw</li>
-                    </ul>
-                    <p class=" blockclear">國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。</p>
+                   <img src="images/demo/01.jpg" alt="">國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。
                 </section>
                 <!-- CP End -->
             </div>
