--- a/mulit_page/活動介紹_演講.htm
+++ b/mulit_page/活動介紹_演講.htm
@@ -69,7 +69,7 @@
                 <!-- CP start -->
                 <section class="cp">
                     <div class="image">
-                        <img src="images/pic01.jpg" ">
+                        <img src="images/pic01.jpg" alt="">
                     </div>
                     <ul>
                         <li><span>活動對象：</span>一般親子</li>
@@ -81,6 +81,8 @@
                         <li><span>E-MAIL：</span>tseng@nmns.edu.tw</li>
                     </ul>
                     <p class=" blockclear">國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。</p>
+
+                     <img src="images/demo/01.jpg" alt="">國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。
                 </section>
                 <!-- CP End -->
             </div>
