20210903 內容頁圖片新增圖片說明

--- a/mulit_page/活動介紹_自然學友之家.htm
+++ b/mulit_page/活動介紹_自然學友之家.htm
@@ -69,7 +69,7 @@
                 <!-- CP start -->
                 <section class="cp">
                     <div class="image">
-                        <img src="images/pic01.jpg" alt="">
+                        <img src="images/pic01.jpg" alt=""><span>圖文說明圖文說明</span>
                     </div>
                     <ul>
                         <li><span>活動對象：</span>一般親子</li>
