--- a/mulit_page/活動介紹_天文.htm
+++ b/mulit_page/活動介紹_天文.htm
@@ -70,7 +70,7 @@
                 <h2 class="title">活動介紹</h2>
                 <!-- CP start -->
                 <section class="cp">
-                   <img src="images/demo/01.jpg" alt="">國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。
+                   <div class="image"><img src="images/demo/01.jpg" alt=""><span>圖文說明圖文說明</span></div>國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。
                 </section>
                 <!-- CP End -->
             </div>
