20210917 修改上圖html及css

--- a/mulit_page/活動介紹_教師.htm
+++ b/mulit_page/活動介紹_教師.htm
@@ -68,9 +68,7 @@
                 <h2 class="title">活動介紹</h2>
                 <!-- CP start -->
                 <section class="cp">
-                    <div class="image">
-                        <img src="images/pic01.jpg" alt="">
-                    </div>
+                    <div class="image"><img src="images/demo/01.jpg" alt=""><span>圖文說明圖文說明</span></div>
                     <ul>
                         <li><span>活動對象：</span>一般親子</li>
                         <li><span>活動地點：</span>鳳凰谷鳥園生態園區 (南投縣鹿谷鄉鳳凰村仁義路1-9號)</li>
@@ -81,7 +79,9 @@
                         <li><span>E-MAIL：</span>tseng@nmns.edu.tw</li>
                     </ul>
                     <p class=" blockclear">國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。</p>
-                    <img src="images/pic01.jpg" alt="">國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。
+                    <img src="https://assets.imgix.net/unsplash/motorbike.jpg?fm=pjpg&w=900&h=500" alt="">
+                    國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待<br><br>
+                    <div class="image_anysize "><img src="https://assets.imgix.net/unsplash/motorbike.jpg?fm=pjpg&w=900&h=500" alt=""><span>圖文說明圖文說明</span></div>
                 </section>
                 <!-- CP End -->
             </div>
