20220608新增修改單頁式table css

--- a/one_page/mp_01.htm
+++ b/one_page/mp_01.htm
@@ -149,6 +149,26 @@
                             </table>
                         </div>
                         <!-- 表格end  -->
+                        <div class="activity_Tb">
+                            <table>
+                                <tr>
+                                    <th>身分證字號：</th>
+                                    <td>A123456789</td>
+                                </tr>
+                                <tr>
+                                    <th>姓名：</th>
+                                    <td>羅郁晴</td>
+                                </tr>
+                                <tr>
+                                    <th>出生年月日：</th>
+                                    <td>1990/03/19</td>
+                                </tr>
+                                <tr>
+                                    <th>手機：</th>
+                                    <td><input type="text" name="" value="請輸入手機號碼" placeholder="請輸入手機號碼"></td>
+                                </tr>
+                            </table>
+                        </div>
                         <!-- 我要報名end -->
                     </div>
                 </div>
@@ -305,7 +325,8 @@
                         <!-- 活動內容start -->
                         <h2 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0s"><span><img src="images/h2_icon02.png" alt=""></span>活動內容</h2>
                         <div class="content">
-                            <div class="image"><img src="images/pic01.jpg" alt=""><span>圖文說明圖文說明</span></div>國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。<br><br><img src="https://assets.imgix.net/unsplash/motorbike.jpg?fm=pjpg&w=900&h=500" alt="">可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。<br><br><div class="image_anysize "><img src="https://assets.imgix.net/unsplash/motorbike.jpg?fm=pjpg&w=900&h=500" alt=""><span>圖文說明圖文說明</span></div>
+                            <div class="image"><img src="images/pic01.jpg" alt=""><span>圖文說明圖文說明</span></div>國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。<br><br><img src="https://assets.imgix.net/unsplash/motorbike.jpg?fm=pjpg&w=900&h=500" alt="">可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。國立自然科學博物館為提供民眾夜間學習之機會，及增進天文觀測之認知，預計開放館內天文台夜間參訪。由於本館除特殊天象活動外，未有夜間營運之經驗，故本次開放為「試營運」活動。以期透過試營運期間，讓民眾可在市區就近接觸到天文觀測，本館也可收集到夜間營運活動相關資訊，讓未來夜間開放活動可以更豐富及符合期待。<br><br>
+                            <div class="image_anysize "><img src="https://assets.imgix.net/unsplash/motorbike.jpg?fm=pjpg&w=900&h=500" alt=""><span>圖文說明圖文說明</span></div>
                             <h3>列表樣式</h3>
                             <ol>
                                 <li>智能系列-仿生機械 <ul>
