--- a/one_page/mp_04.htm
+++ b/one_page/mp_04.htm
@@ -149,6 +149,26 @@
                             </table>
                         </div>
                         <!-- 表格end  -->
+                        <div class="activity_Tb">
+                            <table>
+                                <tr>
+                                    <th>身分證字號：</th>
+                                    <td>A123456789</td>
+                                </tr>
+                                <tr>
+                                    <th>姓名：</th>
+                                    <td>羅郁晴</td>
+                                </tr>
+                                <tr>
+                                    <th>出生年月日：</th>
+                                    <td>1990/03/19</td>
+                                </tr>
+                                <tr>
+                                    <th>手機：</th>
+                                    <td><input type="text" name="" value="請輸入手機號碼" placeholder="請輸入手機號碼"></td>
+                                </tr>
+                            </table>
+                        </div>
                         <!-- 我要報名end -->
                     </div>
                 </div>
